Afgewerkt Eindopdracht NMD

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,21 +10,38 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Website New Wise</h2>
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>Annelies Van Damme</dd>
         <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
+        <dd>98330</dd>
         <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>1CMO Ab</dd>
     </dl>
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>
+            <h2><b>New Wise</b></h2>
+            Voor het vak New Media Design ontwerp ik een website voor de fictieve band New Wise.
+
+            <h3>Wat is Mew Wise?</h3>
+            New Wise is een coverband gericht naar mannen tussen de 50 en 65 jaar oud. Om de band af te stemmen op de doelgroep coveren ze uitsluitend de beste nummers uit de jaren 60, 70 en 80. De periode waarin de doelgroep tieners en jongvolwassenen waren. 
+            <h3>Het doel van de website</h3>
+            Het doel van de website is om meteen een nostalgisch gevoel op te roepen bij de bezoeker. Dit doormiddel van het kleurengebruik en het gebruik van retro lettertypes. Ondanks de retro-feel die ik voor de website wil creëren vind ik het wel belangrijk dat de website zelf modern, minimalistisch en gebruiksvriendelijk oogt.
+            <h3>De inhoud van de website</h3>
+            Inhoudsgericht moet de website informatie bevatten over de band zelf, waar en wanneer de band optreedt en moet er de mogelijkheid bestaan online tickets aan te kopen.
+            Ook moeten er zich op de website genoeg verwijzingen bevinden naar de verschillende sociale media van de band.
+            <h3>De functionaliteiten van de website</h3>
+            Omdat de website er modern en minimalistisch moet uitzien kies ik ervoor simpele pagina's te ontwerpen met elk een duidelijk functie. Enkel voor het online aankopen van tickets en producten zal men meerdere pagina's moeten doorlopen om een betaling te kunnen uitvoeren. Hiervoor zal ik de website doen linken met een externe verkoper.
+            Ik wil graag een dynamische website met veel overlappingen tussen afbeeldingen en de bijhorende tekst. Daarom plan ik veel gebruik te maken van verschillende opacity-settings. Ook wil ik graag gebruik maken van steunvlakken, typografische constructies en decoratieve lijnen om op deze manier duidelijk te maken hoe de pagina gevolgd moeten worden.
+            Verder vind ik het belangrijk dat je via de website zelf de band meteen kan volgen, liken of delen via sociale media. De links naar de verschillende sociale media moeten dus op elke pagina terugkomen.
+            <h3>Conclusie</h3>
+            De website voor de fictieve coverband Wiser New wordt minimalistisch, modern en simpel in gebruik. Met minimale, maar goed uitgewerkte functionaliteiten en vooral veel aandacht voor sfeer en herkenbaarheid.
+             </p>
 </body>
 </html>
