--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,15 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+    <ul>
+        <li><b>Alex, 55 jaar</b>, werkt als bankbediende maar heeft een passie voor rock'n'roll. 
+            Alex gebruikt de website nadat hij op de radio een geweldige cover van New Wise had gehoord. 
+            Hij is erg actief op facebook en klikt dan ook meteen op de facebook link. Nu volgt hij New Wise op facebook en mist hij nooit meer een nieuwe cover. </li>
+        <li><b>Diana, 30 jaar</b>, opzoek naar een vaderdagscadeau voor haar vader van 60. Ze wilt de nieuwe cd van New Wise bestellen. </li>
+        <li><b>Khalil, 50 jaar</b>, wil tickets kopen voor het eerst volgende optreden van New Wise in zijn buurt. </li>
+        <li><b>Roger, 65 jaar</b>, is niet zo handig op de computer maar wil graag wat meer te weten komen over New Wise. 
+            Hij is nog niet bekend met de band, maar houdt erg van de muziek uit de jaren 80. Hij wil voornamelijk covers van deze liedjes terugvinden.</li>
+        <li><b>Marcus, 53 jaar</b>, organiseerd een themafeest voor zijn 54ste verjaardag. Hij wil graag live muziek uit zijn jeugd. Hij bookt New Wise via de website.</li>
+    </ul>
 </body>
 </html>
